--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-30 [美中关系紧张 在华美国企业处境艰难](/articles/voa/1041877.md)
+
+3-30 [百度在港二次上市 “AI第一股”前景看俏？](/articles/voa/1041878.md)
+
 3-30 [美驻帕劳大使访台湾 强调三方关系只会更密切](/articles/voa/1041879.md)
 
 3-30 [台湾跨党派立委共同推动台版人权问责法立法](/articles/voa/1041880.md)
@@ -596,8 +600,4 @@
 3-19 [美议员提案撤销中国永久性正常贸易关系地位](/articles/voa/1042175.md)
 
 3-19 [美两党参议员重提助台湾取得世卫大会观察员身份法案](/articles/voa/1042176.md)
-
-3-19 [中国欲抢占世界科技创新高地，但在现行制度里只能是“中国梦”](/articles/voa/1042177.md)
-
-3-19 [《柳叶刀》最新研究报告：武汉市去年4月约6.9%人有新冠抗体](/articles/voa/1042178.md)
 
