--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-30 [瑞萨火灾停工 全面复工恐需4个月 – 法国国际广播电台 - RFI](/articles/rfi/1032516.md)
+
 3-30 [加拿大停止对55岁以下者打AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1032517.md)
 
 3-30 [联合国秘书长吁设新负债机制助穷国抗疫 – 法国国际广播电台 - RFI](/articles/rfi/1032518.md)
@@ -598,6 +600,4 @@
 3-25 [法国5学生上传仇视中国人推文 被控种族歧视受审 – 法国国际广播电台 - RFI](/articles/rfi/1032814.md)
 
 3-25 [投资人逢低买进 日股收涨 – 法国国际广播电台 - RFI](/articles/rfi/1032815.md)
-
-3-25 [拜登指派贺锦丽 亲自处理美墨边境移民涌入议题 – 法国国际广播电台 - RFI](/articles/rfi/1032816.md)
 
