--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-30 [新疆人权议题发烧 传中国要求台湾别抵制冬奥](/articles/rfa/1046010.md)
+
 3-30 [香港民主进程寿终正寝      立法会选举由选举委员会主导](/articles/rfa/1046011.md)
 
 3-30 [北京改变特首选举规则   本土地产商难再“造王”](/articles/rfa/1046012.md)
@@ -598,6 +600,4 @@
 2-25 [新疆伊宁天主堂面临强拆 知情者谈当地宗教政策](/articles/rfa/1046308.md)
 
 2-24 [美国将联手台日韩澳 打造去中供应链](/articles/rfa/1046309.md)
-
-2-24 [家人被困新疆音讯全无   哈族妇女中国总领馆外集会](/articles/rfa/1046310.md)
 
