--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-31 [国产奶粉质量低劣   三岁幼儿饮用致残](/articles/rfa/1046009.md)
+
 3-30 [新疆人权议题发烧 传中国要求台湾别抵制冬奥](/articles/rfa/1046010.md)
 
 3-30 [香港民主进程寿终正寝      立法会选举由选举委员会主导](/articles/rfa/1046011.md)
@@ -598,6 +600,4 @@
 2-25 [中国制口罩再度引发质疑 法国多家医院停用](/articles/rfa/1046307.md)
 
 2-25 [新疆伊宁天主堂面临强拆 知情者谈当地宗教政策](/articles/rfa/1046308.md)
-
-2-24 [美国将联手台日韩澳 打造去中供应链](/articles/rfa/1046309.md)
 
