--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-31 [全现在｜亚特兰大血案背后 ：性工作者的污名及迷思](/articles/cdt/384360.md)
+
 3-30 [人物｜房子跌成“负资产”，他们困在了燕郊](/articles/cdt/384361.md)
 
 3-30 [【CDTV】徐晓冬｜公民记者陈秋实最新动态：念念不忘必有回响](/articles/cdt/384364.md)
@@ -598,6 +600,4 @@
 2-15 [斯坦福大学SIO｜Clubhouse在中国：它的数据安全吗？](/articles/cdt/385896.md)
 
 2-15 [牛角鱼｜湖北经视，送你一朵小菊花](/articles/cdt/385898.md)
-
-2-15 [【图说天朝】大年三十女儿不能回家住，这破风俗还存在？](/articles/cdt/385910.md)
 
