--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-31 [前访中东 后邀东南亚 中国欲揽盟友制美？](/articles/rfa/1046006.md)
+
 3-31 [中国战狼外交秀又来了  李杨批特鲁多是走狗败家子](/articles/rfa/1046007.md)
 
 3-31 [马耳他记者调查政商勾结遭谋杀  资金线索涉一带一路项目](/articles/rfa/1046008.md)
@@ -598,6 +600,4 @@
 2-25 [美议员发文炮轰中国干涉香港宗教自由](/articles/rfa/1046304.md)
 
 2-25 [学者就台湾应如何与印太国家合作建言献策](/articles/rfa/1046305.md)
-
-2-25 [美加两国领导人举行双边会议  宣示共同抵御中国威胁](/articles/rfa/1046306.md)
 
