--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-31 [德国之声 | 香港选举法改革：“爱国者”才有权参政议政](/articles/cdt/384352.md)
+
 3-31 [全现在｜亚特兰大血案背后 ：性工作者的污名及迷思](/articles/cdt/384360.md)
 
 3-30 [人物｜房子跌成“负资产”，他们困在了燕郊](/articles/cdt/384361.md)
@@ -598,6 +600,4 @@
 2-15 [【麻辣总局】亲戚缺乏“边界意识” 年轻人当然不爱搭理](/articles/cdt/385895.md)
 
 2-15 [斯坦福大学SIO｜Clubhouse在中国：它的数据安全吗？](/articles/cdt/385896.md)
-
-2-15 [牛角鱼｜湖北经视，送你一朵小菊花](/articles/cdt/385898.md)
 
