--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-31 [布林肯誓言捍卫世界人权  自己和盟友都批](/articles/dw/1043237.md)
+
 3-31 [疫情起源报告受质疑 谭德塞罕见批评北京](/articles/dw/1043238.md)
 
 3-30 [德国疫苗机构建议阿斯利康疫苗仅限接种老人](/articles/dw/1043239.md)
@@ -598,6 +600,4 @@
 3-7 [德国又一名联邦议员因“口罩丑闻”宣布辞职](/articles/dw/1043535.md)
 
 3-7 [贝多芬第八交响曲第二乐章](/articles/dw/1043536.md)
-
-3-7 [中国外长两会记者会谈中国外交政策和对外关系](/articles/dw/1043537.md)
 
