--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-31 [魔术师用舞台探讨超越艺术的话题](/articles/voa/1041854.md)
+
+3-31 [拜菅峰会凸显美日同盟重要性 专家：峰会本身即达成目标](/articles/voa/1041855.md)
+
+3-31 [无伴孩童越境激增 国会成员吁拜登迅速处理](/articles/voa/1041856.md)
+
 3-31 [共和党参议员提案，禁购中国天阳能电池板](/articles/voa/1041857.md)
 
 3-31 [专家说: 接种新冠疫苗莫挑剔](/articles/voa/1041858.md)
@@ -594,10 +600,4 @@
 3-20 [美中结束高层会谈，美方：我们清醒地来，清醒地离开](/articles/voa/1042152.md)
 
 3-20 [布林肯将参加北约外长会议 与欧盟协商应对包括中国在内的共同挑战](/articles/voa/1042153.md)
-
-3-20 [阿拉斯加交锋后 美国对华政策将持续强硬](/articles/voa/1042154.md)
-
-3-20 [“完全不可接受”：联合国秘书长谴责缅甸军方杀害示威者并逮捕记者](/articles/voa/1042155.md)
-
-3-20 [中国欲做科技霸主 美国起而迎击，科技“决斗”已经开始](/articles/voa/1042156.md)
 
