--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-31 [关于世卫新冠溯源调查报告，我们知道些什么](/articles/nyt/1047021.md)
+
 3-31 [香港新选举制度将带来哪些影响？](/articles/nyt/1047022.md)
 
 3-31 [简报：详解香港选举制度改革；纽约再发生袭击亚裔事件](/articles/nyt/1047023.md)
@@ -598,6 +600,4 @@
 1-12 [我们为什么要再次弹劾特朗普](/articles/nyt/1047319.md)
 
 1-12 [特朗普会因煽动性言论面临法律惩罚吗?](/articles/nyt/1047320.md)
-
-1-12 [新疆发生种族灭绝，我才开始寻根](/articles/nyt/1047321.md)
 
