--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,16 @@
 金融时报
 ------
 
+3-31 [小米宣布进军电动汽车市场](/articles/ft/1045818.md)
+
+3-31 [距离制造强国，中国制造还缺什么？](/articles/ft/1045819.md)
+
+3-31 [对冲基金“小虎队”是怎么养成的？](/articles/ft/1045820.md)
+
+3-31 [艰难时世下的投资：腾讯对美收购](/articles/ft/1045821.md)
+
+3-31 [美国证监会将如何监管加密货币？](/articles/ft/1045822.md)
+
 3-30 [沃尔沃将为全公司新生儿父母均提供完整产假](/articles/ft/1045823.md)
 
 3-30 [拜登政府为美国海上风电开发设定目标](/articles/ft/1045824.md)
@@ -590,14 +600,4 @@
 2-4 [每周时事分析：“更长的电报”与中国应给予世界的承诺](/articles/ft/1046116.md)
 
 2-4 [互联网时代产业转型升级的两面性](/articles/ft/1046117.md)
-
-2-4 [字节跳动与腾讯再度开启诉讼大战](/articles/ft/1046118.md)
-
-2-4 [通用汽车因芯片短缺关闭三家工厂](/articles/ft/1046119.md)
-
-2-4 [缅甸警方指控昂山素季违反进出口法律](/articles/ft/1046120.md)
-
-2-4 [如何像预测天气一样预测疾病？](/articles/ft/1046121.md)
-
-2-4 [FT社评：监禁纳瓦尔尼突显克里姆林宫不安](/articles/ft/1046122.md)
 
