--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-31 [维舟｜爱国的两种话语](/articles/cdt/384348.md)
+
 3-31 [【404文库】复旦大学知和社 | 关于知和社无法参加2021春季学期百团大战的说明](/articles/cdt/384351.md)
 
 3-31 [德国之声 | 香港选举法改革：“爱国者”才有权参政议政](/articles/cdt/384352.md)
@@ -598,6 +600,4 @@
 2-16 [维舟｜亲情与人情](/articles/cdt/385891.md)
 
 2-16 [顺水推舟｜我们再也不能给李文亮扫墓了](/articles/cdt/385893.md)
-
-2-15 [【麻辣总局】亲戚缺乏“边界意识” 年轻人当然不爱搭理](/articles/cdt/385895.md)
 
