--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-31 [“你不属于这里”：纽约再次发生亚裔被袭击事件](/articles/nyt/1047019.md)
+
 3-31 [面对袭击和仇恨，第二代亚裔移民如何保护年迈的父母](/articles/nyt/1047020.md)
 
 3-31 [关于世卫新冠溯源调查报告，我们知道些什么](/articles/nyt/1047021.md)
@@ -598,6 +600,4 @@
 1-12 [中国经济走势强劲，人民币汇率水涨船高](/articles/nyt/1047317.md)
 
 1-12 [邓飞案与中国“我也是”运动困境：发声者被判诽谤](/articles/nyt/1047318.md)
-
-1-12 [我们为什么要再次弹劾特朗普](/articles/nyt/1047319.md)
 
