--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-31 [疫情后首度有球迷入场加油 金块104比95擒76人 – 法国国际广播电台 - RFI](/articles/rfi/1032498.md)
+
+3-31 [策划水门案以助尼克森 前FBI探员李迪辞世 – 法国国际广播电台 - RFI](/articles/rfi/1032499.md)
+
+3-31 [美国分公司称要更名 福斯汽车大开愚人节玩笑 – 法国国际广播电台 - RFI](/articles/rfi/1032500.md)
+
 3-31 [拜登提名联邦法官 11人含非裔、穆斯林 – 法国国际广播电台 - RFI](/articles/rfi/1032501.md)
 
 3-31 [通膨隐忧、金融类股重挫 日股随美股收跌 – 法国国际广播电台 - RFI](/articles/rfi/1032502.md)
@@ -594,10 +600,4 @@
 3-25 [中国增建核导弹发射井引发美国担忧 - 法国报纸摘要](/articles/rfi/1032796.md)
 
 3-25 [欧股开盘震荡 涨跌分歧 – 法国国际广播电台 - RFI](/articles/rfi/1032797.md)
-
-3-25 [5名法国青年因网上歧视亚裔言论巴黎出庭受审 - 要闻解说](/articles/rfi/1032798.md)
-
-3-25 [脸书称发现监控维吾尔人资讯的中国骇客账户](/articles/rfi/1032799.md)
-
-3-25 [多艘拖船救援卡在苏伊士运河的长荣货轮 航道受阻日本船东致歉](/articles/rfi/1032800.md)
 
