--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-31 [疫情溯源报告成众矢之的  世卫被批“两面不是人”](/articles/rfa/1046000.md)
+
+3-31 [台湾工研院研究成果转移民企   摇身一变成中资公司](/articles/rfa/1046001.md)
+
 3-31 [中国以 “教育营”方式对付基督徒     多地信徒被关进“教育转化基地”](/articles/rfa/1046002.md)
 
 3-31 [美高官：美日韩应加深经济整合  以抵御对手国家经济胁迫](/articles/rfa/1046003.md)
@@ -596,8 +600,4 @@
 2-25 [习近平称脱贫“创造人间奇迹”      怀念中共打土豪分田地年代](/articles/rfa/1046298.md)
 
 2-25 [习近平表扬中共 “打土豪、分田地” 历史](/articles/rfa/1046299.md)
-
-2-25 [人权组织报告：新疆穆斯林被判刑案件激增](/articles/rfa/1046300.md)
-
-2-25 [英国17私校被中资收购   英国人惊呼：文化被中共接管](/articles/rfa/1046301.md)
 
