--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-31 [美国务院命令非必要外交人员撤离缅甸](/articles/voa/1041850.md)
+
+3-31 [“战狼外交”的效果和走向](/articles/voa/1041851.md)
+
 3-31 [被批亚裔事务工作不力 白宫出台新措施](/articles/voa/1041852.md)
 
 3-31 [中国在全球非法捕鱼成众矢之的](/articles/voa/1041853.md)
@@ -596,8 +600,4 @@
 3-20 [美议员关注中国对台湾压迫寻求更强威慑方式](/articles/voa/1042148.md)
 
 3-20 [阿拉斯加会谈争锋相对 美议员：中方行为暴露出缺乏自我意识](/articles/voa/1042149.md)
-
-3-20 [枪击惨案后拜登会晤亚裔美国人领袖 呼吁美国人团结起来反对仇恨](/articles/voa/1042150.md)
-
-3-20 [到底谁违反了外交礼仪？美中阿拉斯加会谈真相](/articles/voa/1042151.md)
 
