--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-31 [中国动漫潜入台湾成统战先锋？立委吁政府补破网](/articles/rfa/1045999.md)
+
 3-31 [疫情溯源报告成众矢之的  世卫被批“两面不是人”](/articles/rfa/1046000.md)
 
 3-31 [台湾工研院研究成果转移民企   摇身一变成中资公司](/articles/rfa/1046001.md)
@@ -598,6 +600,4 @@
 2-25 [美国第七舰队证实 “威尔伯号”驱逐舰通过台海](/articles/rfa/1046297.md)
 
 2-25 [习近平称脱贫“创造人间奇迹”      怀念中共打土豪分田地年代](/articles/rfa/1046298.md)
-
-2-25 [习近平表扬中共 “打土豪、分田地” 历史](/articles/rfa/1046299.md)
 
