--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-31 [奥斯卡提名导演赵婷陷美中角力夹缝](/articles/voa/1041849.md)
+
 3-31 [美国务院命令非必要外交人员撤离缅甸](/articles/voa/1041850.md)
 
 3-31 [“战狼外交”的效果和走向](/articles/voa/1041851.md)
@@ -598,6 +600,4 @@
 3-20 [纽约大学学生上海被拘事件 会否引发寒蝉效应？](/articles/voa/1042147.md)
 
 3-20 [美议员关注中国对台湾压迫寻求更强威慑方式](/articles/voa/1042148.md)
-
-3-20 [阿拉斯加会谈争锋相对 美议员：中方行为暴露出缺乏自我意识](/articles/voa/1042149.md)
 
