--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-31 [香港电台“地震”持续 参赛新闻作品被勒令停止](/articles/voa/1041845.md)
+
+3-31 [美国国务院人权报告指香港自由与自治遭到系统性摧毁](/articles/voa/1041846.md)
+
+3-31 [BBC记者或因安全担忧离开北京前往台湾](/articles/voa/1041847.md)
+
 3-31 [帮助移英港人的“远离政治”实践者](/articles/voa/1041848.md)
 
 3-31 [奥斯卡提名导演赵婷陷美中角力夹缝](/articles/voa/1041849.md)
@@ -594,10 +600,4 @@
 3-20 [新任美国贸易代表誓言促进公平增长](/articles/voa/1042143.md)
 
 3-20 [美中会谈激烈开场低调结束 专家：两国摩擦将成常态](/articles/voa/1042144.md)
-
-3-20 [力求贸易武器化 中国转向专制政权获得稳定供应链](/articles/voa/1042145.md)
-
-3-20 [列入实体名单仍不够强化 共和党议员敦促拜登政府加紧限制中芯国际](/articles/voa/1042146.md)
-
-3-20 [纽约大学学生上海被拘事件 会否引发寒蝉效应？](/articles/voa/1042147.md)
 
