--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-31 [知名时政论坛“猫眼看人”遭关闭](/articles/rfa/1045997.md)
+
 3-31 [台湾增购美制爱国者导弹  提高防卫能力](/articles/rfa/1045998.md)
 
 3-31 [中国动漫潜入台湾成统战先锋？立委吁政府补破网](/articles/rfa/1045999.md)
@@ -598,6 +600,4 @@
 2-25 [成都试行数字人民币   民众疯抢4000万元红包](/articles/rfa/1046295.md)
 
 2-25 [戴琪：建立美国盟友统一战线 使中国信守承诺](/articles/rfa/1046296.md)
-
-2-25 [美国第七舰队证实 “威尔伯号”驱逐舰通过台海](/articles/rfa/1046297.md)
 
