--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-1 [若都戴驱鲨装置 估50年间澳洲可少1063人被咬 – 法国国际广播电台 - RFI](/articles/rfi/1032480.md)
+
 4-1 [亚裔老妇纽约街头被痛殴  警方逮捕犯嫌 – 法国国际广播电台 - RFI](/articles/rfi/1032481.md)
 
 3-31 [疫情冲击 中国3大航空亏损均达上百亿人民币 – 法国国际广播电台 - RFI](/articles/rfi/1032482.md)
@@ -598,6 +600,4 @@
 3-26 [普京占栈诺不终身 修宪可至2036](/articles/rfi/1032778.md)
 
 3-26 [批骂H&amp;M与Nike是工作 门前排队是生活？](/articles/rfi/1032779.md)
-
-3-25 [咬人后 美国第一犬回返白宫了](/articles/rfi/1032780.md)
 
