--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-1 [时事大家谈: 世卫报告疑窦重重，中国多少隐情不为人知？](/articles/voa/1041841.md)
+
 4-1 [韩国外长即将访问中国 3年多来首次](/articles/voa/1041842.md)
 
 3-31 [加拿大针对亚裔歧视事件剧增，平权人士呼吁正视现实与改变](/articles/voa/1041843.md)
@@ -598,6 +600,4 @@
 3-20 [中资公司赴台抢夺人才 学者：国家支持的系统性挖角](/articles/voa/1042139.md)
 
 3-20 [杨洁篪发飙阿拉斯加或给美国对华政策增添新的变数](/articles/voa/1042140.md)
-
-3-20 [美中驻联合国大使就种族主义发生争执](/articles/voa/1042141.md)
 
