--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-1 [【CDT网语】2021年3月网语集锦：说是“不吃这一套”，但最吃这套的其实还是我们](/articles/cdt/384322.md)
+
 4-1 [苹果日报 | 以战狼外交“为世界指明方向”](/articles/cdt/384324.md)
 
 4-1 [德国之声 | “粗鲁外交”能让世界闭嘴吗？](/articles/cdt/384326.md)
@@ -598,6 +600,4 @@
 2-17 [中外艺术 | 那年，武汉的春节：100张照片背后的惨痛](/articles/cdt/385876.md)
 
 2-17 [【CDT敏感词周报】第十二期：春晚、武汉花市、缅甸GFW](/articles/cdt/385879.md)
-
-2-16 [目以｜缅甸：只要民众不配合，独裁政府就难以运行](/articles/cdt/385882.md)
 
