--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-1 [公民记者陈秋实回到老家？ 方斌仍孤立无援](/articles/rfa/1045995.md)
+
 4-1 [世卫发布疫情溯源报告 谭德塞 : 实验室事故的评估不够广泛](/articles/rfa/1045996.md)
 
 3-31 [知名时政论坛“猫眼看人”遭关闭](/articles/rfa/1045997.md)
@@ -598,6 +600,4 @@
 2-26 [中国打击“非法宗教”运动持续进行  延烧南方多个省份](/articles/rfa/1046293.md)
 
 2-25 [中国公布宗教法 台外长批“中共就是中国宗教的神”](/articles/rfa/1046294.md)
-
-2-25 [成都试行数字人民币   民众疯抢4000万元红包](/articles/rfa/1046295.md)
 
