--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-1 [中国房地产调控高压持续　三月份67城房价下跌](/articles/rfa/1045993.md)
+
+4-1 [研究显示：中共利用国际社媒  升级虚假宣传](/articles/rfa/1045994.md)
+
 4-1 [公民记者陈秋实回到老家？ 方斌仍孤立无援](/articles/rfa/1045995.md)
 
 4-1 [世卫发布疫情溯源报告 谭德塞 : 实验室事故的评估不够广泛](/articles/rfa/1045996.md)
@@ -596,8 +600,4 @@
 2-26 [联合国人权理事会多国谴责中国在新疆侵犯人权罪行](/articles/rfa/1046291.md)
 
 2-26 [“中国通”马凯：新疆是中共数字极权主义的试验田](/articles/rfa/1046292.md)
-
-2-26 [中国打击“非法宗教”运动持续进行  延烧南方多个省份](/articles/rfa/1046293.md)
-
-2-25 [中国公布宗教法 台外长批“中共就是中国宗教的神”](/articles/rfa/1046294.md)
 
