--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-1 [白宫要义: 周五美日韩国安顾问首次三方会谈；拜登总统宣布基础建设方案](/articles/voa/1041834.md)
+
+4-1 [威斯康星州最高法院推翻州长颁布的口罩令](/articles/voa/1041835.md)
+
+4-1 [澳大利亚宣布与美国合作建造导弹](/articles/voa/1041836.md)
+
 4-1 [在纽约街头殴打亚裔妇女的嫌疑人被逮捕](/articles/voa/1041837.md)
 
 4-1 [香港各界回应M+博物馆及新疆棉争议](/articles/voa/1041838.md)
@@ -594,10 +600,4 @@
 3-21 [共同社：美日防长同意台海发生军事冲突时密切合作](/articles/voa/1042132.md)
 
 3-21 [中国说将与美国组建气候变化工作组](/articles/voa/1042133.md)
-
-3-21 [哈里斯副总统祝贺哈桑就任坦桑尼亚总统](/articles/voa/1042134.md)
-
-3-21 [美印承诺共同深化战略伙伴合作](/articles/voa/1042135.md)
-
-3-21 [沙特联盟发动空袭，帮助抵御胡塞武装的攻势](/articles/voa/1042136.md)
 
