--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-1 [简报：H&M回应新疆棉事件；白宫指责中国阻碍新冠调查](/articles/nyt/1047016.md)
+
+4-1 [美国有一个统治阶级](/articles/nyt/1047017.md)
+
 3-31 [塞尔维亚称赞中国公司为救星，但当地人付出了代价](/articles/nyt/1047018.md)
 
 3-31 [“你不属于这里”：纽约再次发生亚裔被袭击事件](/articles/nyt/1047019.md)
@@ -596,8 +600,4 @@
 1-13 [为什么人们会相信统治者的弥天大谎](/articles/nyt/1047314.md)
 
 1-13 [“智能”坐垫记录离座时间，杭州一公司被指监控员工](/articles/nyt/1047315.md)
-
-1-13 [简报：彭斯拒绝罢免特朗普；多名共和党人支持弹劾](/articles/nyt/1047316.md)
-
-1-12 [中国经济走势强劲，人民币汇率水涨船高](/articles/nyt/1047317.md)
 
