--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-1 [马克宏宣布 法国再度封城抗疫 – 法国国际广播电台 - RFI](/articles/rfi/1032472.md)
+
+4-1 [称受威胁 BBC驻北京记者前往台湾 – 法国国际广播电台 - RFI](/articles/rfi/1032473.md)
+
 4-1 [拜登推基础建设计画 美股科技股走扬 – 法国国际广播电台 - RFI](/articles/rfi/1032474.md)
 
 4-1 [乌俄边境气氛紧张 美参联主席和两国最高将领通话 – 法国国际广播电台 - RFI](/articles/rfi/1032475.md)
@@ -596,8 +600,4 @@
 3-26 [欧美品牌拒用新疆棉遭中共抵制   陆民恐慌囤货](/articles/rfi/1032770.md)
 
 3-26 [杜特尔特会晤中国大使 对大量船只集结表示担忧](/articles/rfi/1032771.md)
-
-3-26 [雅鲁藏布江下游水电开发工程对水资源的战略性控制——十四五规划正式开启中印争水之战](/articles/rfi/1032772.md)
-
-3-26 [台湾最新民调：近九成人反对北京的“一国两制”](/articles/rfi/1032773.md)
 
