--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-1 [【旧闻重温】南方周末 | 基层治理“积分制”试验：举报违法犯罪加分，越级上访扣分](/articles/cdt/384284.md)
+
 4-1 [【CDT网语】2021年3月网语集锦：说是“不吃这一套”，但最吃这套的其实还是我们](/articles/cdt/384322.md)
 
 4-1 [苹果日报 | 以战狼外交“为世界指明方向”](/articles/cdt/384324.md)
@@ -598,6 +600,4 @@
 2-17 [全现在 | 中国版《熔炉》揭发人何思云：因报警失去教职，远走他乡仍沒有安全感](/articles/cdt/385875.md)
 
 2-17 [中外艺术 | 那年，武汉的春节：100张照片背后的惨痛](/articles/cdt/385876.md)
-
-2-17 [【CDT敏感词周报】第十二期：春晚、武汉花市、缅甸GFW](/articles/cdt/385879.md)
 
