--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-1 [与归随笔 | 不接种疫苗，按“老赖”处理？](/articles/cdt/384279.md)
+
+4-1 [【网络民议】上海人口管理新规：在沪停留超24小时需登记  网友：要办沪照了](/articles/cdt/384282.md)
+
 4-1 [【旧闻重温】南方周末 | 基层治理“积分制”试验：举报违法犯罪加分，越级上访扣分](/articles/cdt/384284.md)
 
 4-1 [【CDT网语】2021年3月网语集锦：说是“不吃这一套”，但最吃这套的其实还是我们](/articles/cdt/384322.md)
@@ -596,8 +600,4 @@
 2-17 [【网络民议】中共要加速复兴传统文化，那会导致什么样的后果？](/articles/cdt/385858.md)
 
 2-17 [人生研究所｜看过这档停播的《谭谈交通》，今年所有春晚小品都得认输](/articles/cdt/385860.md)
-
-2-17 [全现在 | 中国版《熔炉》揭发人何思云：因报警失去教职，远走他乡仍沒有安全感](/articles/cdt/385875.md)
-
-2-17 [中外艺术 | 那年，武汉的春节：100张照片背后的惨痛](/articles/cdt/385876.md)
 
