--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-1 [北美新药科普历史网 | 世卫组织新冠朔源报告的三个缺憾](/articles/cdt/384277.md)
+
 4-1 [与归随笔 | 不接种疫苗，按“老赖”处理？](/articles/cdt/384279.md)
 
 4-1 [【网络民议】上海人口管理新规：在沪停留超24小时需登记  网友：要办沪照了](/articles/cdt/384282.md)
@@ -598,6 +600,4 @@
 2-17 [鱼眼观察｜万万没想到，茅台要出院士了](/articles/cdt/385856.md)
 
 2-17 [【网络民议】中共要加速复兴传统文化，那会导致什么样的后果？](/articles/cdt/385858.md)
-
-2-17 [人生研究所｜看过这档停播的《谭谈交通》，今年所有春晚小品都得认输](/articles/cdt/385860.md)
 
