--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-1 [李卓人：摆脱专制统治是港人共同目标](/articles/dw/1043216.md)
+
 4-1 [香港818案被告罪成 集会自由恐受影响](/articles/dw/1043217.md)
 
 4-1 [香港818案宣判有罪 集会自由恐受影响](/articles/dw/1043218.md)
@@ -598,6 +600,4 @@
 3-15 [德铁员工屡受拒戴口罩者侮辱和攻击](/articles/dw/1043514.md)
 
 3-8 [林郑感谢北京为港「解困」 重申中央有主导权](/articles/dw/1043515.md)
-
-3-8 [日本福岛十周年 你应该知道的一组数字](/articles/dw/1043516.md)
 
