--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-1 [全英音乐奖入围名单女歌手风光 韩天团BTS写历史 – 法国国际广播电台 - RFI](/articles/rfi/1032460.md)
+
+4-1 [美国振兴方案利多加持 日股收高 – 法国国际广播电台 - RFI](/articles/rfi/1032461.md)
+
 4-1 [迈阿密公开赛8强 梅迪维夫与大?直美出局 – 法国国际广播电台 - RFI](/articles/rfi/1032462.md)
 
 4-1 [缅甸恐爆内战 联合国特使促安理会行动 – 法国国际广播电台 - RFI](/articles/rfi/1032463.md)
@@ -596,8 +600,4 @@
 3-26 [世界报：希腊比雷埃夫斯港居民对中国投资者的不满](/articles/rfi/1032758.md)
 
 3-26 [美股拉尾盘收涨 – 法国国际广播电台 - RFI](/articles/rfi/1032759.md)
-
-3-26 [疫情与通膨引忧 欧股涨跌互见 – 法国国际广播电台 - RFI](/articles/rfi/1032760.md)
-
-3-26 [KCNA：北韩25日试射新型战术导向发射体 – 法国国际广播电台 - RFI](/articles/rfi/1032761.md)
 
