--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-1 [台国安局长：中共明年召开20大 增加台湾国安应处压力](/articles/voa/1041820.md)
+
 4-1 [李柱铭和黎智英等7位香港民主派人士被判组织或参与未经批准集结罪成](/articles/voa/1041821.md)
 
 4-1 [香港法院裁定黎智英和李柱铭等民主派人士组织或参与未经批准集结罪成](/articles/voa/1041822.md)
@@ -598,6 +600,4 @@
 3-22 [纽约大学学生上海被拘事件 会否引发寒蝉效应？](/articles/voa/1042118.md)
 
 3-22 [专家；美中关系更可能是持续而不是改变](/articles/voa/1042119.md)
-
-3-22 [英国准备对抗来自中国的战略性威胁](/articles/voa/1042120.md)
 
