--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+4-1 [全球芯片供应链集中在某些地区 愈容易受重大干扰的影响--SIA研究](/articles/reuters/1039807.md)
+
+4-1 [美元持坚人民币放量收创四个月新低 关注美国非农就业数据](/articles/reuters/1039808.md)
+
 4-1 [中国央行官员：数研所与香港金管局就数字人民币跨境使用进行测试](/articles/reuters/1039809.md)
 
 4-1 [机构投资者增加风险水平 对于2021年展望更加乐观--研究](/articles/reuters/1039810.md)
@@ -596,8 +600,4 @@
 3-25 [恒大汽车去年净亏扩大至逾76亿人民币 力争2025年实现年产销超100万辆汽车](/articles/reuters/1040105.md)
 
 3-25 [中国股市沪深300指数收在逾三个月低位 因政策收紧担忧和新疆问题](/articles/reuters/1040106.md)
-
-3-25 [对于一些公司拒用新疆棉花 中国外交部称不用新疆棉花是相关企业的损失](/articles/reuters/1040107.md)
-
-3-25 [中国商务部称纯白新疆棉花不容抹黑 望有关企业纠正错误避免商业问题政治化](/articles/reuters/1040108.md)
 
