--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-1 [法国再次将进入全国停摆状态](/articles/dw/1043214.md)
+
+4-1 [加州发生枪击案 四死一伤](/articles/dw/1043215.md)
+
 4-1 [李卓人：摆脱专制统治是港人共同目标](/articles/dw/1043216.md)
 
 4-1 [香港818案被告罪成 集会自由恐受影响](/articles/dw/1043217.md)
@@ -596,8 +600,4 @@
 3-15 [缅甸军队镇压导致39人丧命 中资工厂遭纵火](/articles/dw/1043512.md)
 
 3-15 [130多国无疫苗 世贸总干事呼吁开放生产许可](/articles/dw/1043513.md)
-
-3-15 [德铁员工屡受拒戴口罩者侮辱和攻击](/articles/dw/1043514.md)
-
-3-8 [林郑感谢北京为港「解困」 重申中央有主导权](/articles/dw/1043515.md)
 
