--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-1 [上海率先 “新疆化”？ 外省人入沪逾24小时须登记](/articles/rfa/1045989.md)
+
 4-1 [美政府报告：中国仍存在重大贸易壁垒](/articles/rfa/1045990.md)
 
 4-1 [美英质疑世卫新冠溯源报告  美国为何担忧实验室泄露?](/articles/rfa/1045991.md)
@@ -598,6 +600,4 @@
 2-26 [凤凰卫视高层异动     已成央视分台？](/articles/rfa/1046287.md)
 
 2-26 [基础学科加入国安内容  香港教育“大陆化”](/articles/rfa/1046288.md)
-
-2-26 [拜登下令检讨供应链   ”小院高墙“应对中国？](/articles/rfa/1046289.md)
 
