--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-1 [拜登公布2万亿美元基建计划](/articles/ft/1045809.md)
+
 4-1 [每周时事分析：中国在新疆问题上面临的难题](/articles/ft/1045810.md)
 
 4-1 [BioNTech/辉瑞疫苗对青少年安全有效](/articles/ft/1045811.md)
@@ -598,6 +600,4 @@
 2-5 [GDP仍是衡量社会进步的良好标准](/articles/ft/1046107.md)
 
 2-5 [小米起诉美国防部与财政部：中美关系新走向的一个试金石](/articles/ft/1046108.md)
-
-2-5 [海口：16个梦幻天团地标组合](/articles/ft/1046109.md)
 
