--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-1 [【404文库】基本常识｜刚刚！新华社和人民日报被查！](/articles/cdt/384265.md)
+
+4-1 [【404文库】鱼眼观察｜华为的“新发明”厉害了](/articles/cdt/384266.md)
+
 4-1 [情况有点复杂 | 中国有座城市，花了近30年把一条河熬成米其林级别的火锅汤底 ⎮ 淄博火锅鱼](/articles/cdt/384272.md)
 
 4-1 [北美新药科普历史网 | 世卫组织新冠朔源报告的三个缺憾](/articles/cdt/384277.md)
@@ -596,8 +600,4 @@
 2-18 [世界灯火归来 | 茅台总工程师入围院士候选人：科技性不高侮辱性极强！](/articles/cdt/385848.md)
 
 2-17 [极昼工作室｜「两头婚」的春节，没有硝烟的性别战争无处不在](/articles/cdt/385852.md)
-
-2-17 [维舟｜为什么现在的中国还有这样的人](/articles/cdt/385853.md)
-
-2-17 [德国之声｜蚂蚁IPO遭停内幕：对习近平造成潜在挑战的政商权贵们](/articles/cdt/385855.md)
 
