--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-1 [拜登基础建设计画激励 亚股劲扬 – 法国国际广播电台 - RFI](/articles/rfi/1032458.md)
+
 4-1 [微软拿下美国防部6236亿元大单 供应AR军用头盔 – 法国国际广播电台 - RFI](/articles/rfi/1032459.md)
 
 4-1 [全英音乐奖入围名单女歌手风光 韩天团BTS写历史 – 法国国际广播电台 - RFI](/articles/rfi/1032460.md)
@@ -598,6 +600,4 @@
 3-26 [拜登2024打算竞选连任 料再携手贺锦丽 – 法国国际广播电台 - RFI](/articles/rfi/1032756.md)
 
 3-26 [拜登订新目标 上任百日施打2亿剂疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1032757.md)
-
-3-26 [世界报：希腊比雷埃夫斯港居民对中国投资者的不满](/articles/rfi/1032758.md)
 
