--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-1 [缅甸联邦议会代表委员会宣布成立新政府对抗军事政变](/articles/voa/1041816.md)
+
 4-1 [艺人“表忠”身不由己 “民法典”成违约保护伞](/articles/voa/1041817.md)
 
 4-1 [财新3月PMI显示中国内需疲软](/articles/voa/1041818.md)
@@ -598,6 +600,4 @@
 3-22 [新任美国贸易代表誓言促进公平增长](/articles/voa/1042114.md)
 
 3-22 [美中会谈激烈开场低调结束 专家：两国摩擦将成常态](/articles/voa/1042115.md)
-
-3-22 [力求贸易武器化 中国转向专制政权获得稳定供应链](/articles/voa/1042116.md)
 
