--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-1 [中国疫苗接种逾1.14亿剂次   强制接种收效接种指标曝光](/articles/rfa/1045987.md)
+
 4-1 [“民主之父”李柱铭被定罪    多年战友形容 “弄死香港第一枪”](/articles/rfa/1045988.md)
 
 4-1 [上海率先 “新疆化”？ 外省人入沪逾24小时须登记](/articles/rfa/1045989.md)
@@ -598,6 +600,4 @@
 2-26 [美众院外委会通过法案和决议案  抵制北京奥运 关注香港](/articles/rfa/1046285.md)
 
 2-26 [离婚获5万元赔偿  “全职太太”引爆舆论](/articles/rfa/1046286.md)
-
-2-26 [凤凰卫视高层异动     已成央视分台？](/articles/rfa/1046287.md)
 
