--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-1 [台外交部证实BBC记者抵台 称欢迎各国媒体来台享受言论自由](/articles/voa/1041815.md)
+
 4-1 [缅甸联邦议会代表委员会宣布成立新政府对抗军事政变](/articles/voa/1041816.md)
 
 4-1 [艺人“表忠”身不由己 “民法典”成违约保护伞](/articles/voa/1041817.md)
@@ -598,6 +600,4 @@
 3-22 [美中驻联合国大使就种族主义发生争执](/articles/voa/1042113.md)
 
 3-22 [新任美国贸易代表誓言促进公平增长](/articles/voa/1042114.md)
-
-3-22 [美中会谈激烈开场低调结束 专家：两国摩擦将成常态](/articles/voa/1042115.md)
 
