--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-1 [人权与贸易区别对待？企业界呼吁美中合作共存](/articles/dw/1043203.md)
+
+4-1 [BBC记者辞京赴台事件持续发酵](/articles/dw/1043204.md)
+
+4-1 [德语媒体：不能让中国人抢夺我们的港口](/articles/dw/1043205.md)
+
 4-1 [美国边境保护官员救下两名儿童](/articles/dw/1043206.md)
 
 4-1 [避风牛轭礁? 美国与菲律宾讨论南海问题](/articles/dw/1043207.md)
@@ -594,10 +600,4 @@
 3-15 [中国是如何影响德国出版商收回一童书的？](/articles/dw/1043501.md)
 
 3-15 [马云去哪儿了？私人飞机行程泄露答案](/articles/dw/1043502.md)
-
-3-15 [抗议殃及台商 台外交部建议在缅挂国旗](/articles/dw/1043503.md)
-
-3-15 [维权人士李翘楚被正式逮捕](/articles/dw/1043504.md)
-
-3-15 [助许智峯逃亡 港府寻求引渡丹麦议员遭拒](/articles/dw/1043505.md)
 
