--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-2 [北京在一片抵制声中进行冬奥会的测试活动](/articles/voa/1041811.md)
+
+4-1 [台湾帕劳“旅行泡泡”正式开通 首发团如期出发](/articles/voa/1041812.md)
+
 4-1 [为增市民信心？香港下周恢复复必泰疫苗接种](/articles/voa/1041813.md)
 
 4-1 [中西方人权之争烈度空前，美国巨商呼吁为贸易划出防火隔离带](/articles/voa/1041814.md)
@@ -596,8 +600,4 @@
 3-22 [奥运会主办方决定：本届东京夏奥会和残奥会不接待国外观众](/articles/voa/1042109.md)
 
 3-22 [中国禁止特斯拉汽车进入敏感区域？马斯克回应：不会用车当间谍](/articles/voa/1042110.md)
-
-3-22 [杨洁篪发飙阿拉斯加或给美国对华政策增添新的变数](/articles/voa/1042111.md)
-
-3-22 [中资公司赴台抢夺人才 学者：国家支持的系统性挖角](/articles/voa/1042112.md)
 
