--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-2 [台湾新增21家外媒记者    悠野：中国惩罚记者成常态](/articles/rfa/1045983.md)
+
+4-1 [美中南海撞机二十年  历史重演迫在眉睫？](/articles/rfa/1045984.md)
+
 4-1 [香港民主人士李柱铭、黎智英等7人非法集结罪成](/articles/rfa/1045985.md)
 
 4-1 [中方急找演员？新疆发布会教培中心结业员是复旦毕业生](/articles/rfa/1045986.md)
@@ -596,8 +600,4 @@
 2-26 [美国拉拢台湾巩固供应链 台积电扮演关键战略角色](/articles/rfa/1046281.md)
 
 2-26 [又见中国资讯战 台湾国安局成谣言攻击对象](/articles/rfa/1046282.md)
-
-2-26 [国际社会围堵中国   北京打压香港民主派作测试](/articles/rfa/1046283.md)
-
-2-26 [国企收购苏宁易购百亿股权    民企国有化趋势不可逆转](/articles/rfa/1046284.md)
 
