--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-2 [美暂不取消对华关税   人权与贸易能分开吗？](/articles/rfa/1045978.md)
+
+4-2 [加拿大军舰行经南海  中方表达不满](/articles/rfa/1045979.md)
+
 4-2 [声援王全璋案入狱  天津人权捍卫者张建中刑满获释](/articles/rfa/1045980.md)
 
 4-2 [习近平再谈红色资源   意在重释党史？](/articles/rfa/1045981.md)
@@ -596,8 +600,4 @@
 2-27 [欧洲第一国  荷兰国会认定新疆维吾尔遭种族灭绝](/articles/rfa/1046276.md)
 
 2-27 [抖音海外版涉侵犯美用户隐私   认赔9200万美元](/articles/rfa/1046277.md)
-
-2-27 [港版国安法魔掌伸进大学校园   学生组织遭全方位打压](/articles/rfa/1046278.md)
-
-2-26 [中国突禁台湾凤梨进口  又一个政治的牺牲品？](/articles/rfa/1046279.md)
 
