--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-2 [洛杉矶中领馆外爆发示威 抗议中国干涉缅甸政局](/articles/rfa/1045976.md)
+
+4-2 [外媒是改善中国形象一环？ 华春莹再飙BBC](/articles/rfa/1045977.md)
+
 4-2 [美暂不取消对华关税   人权与贸易能分开吗？](/articles/rfa/1045978.md)
 
 4-2 [加拿大军舰行经南海  中方表达不满](/articles/rfa/1045979.md)
@@ -596,8 +600,4 @@
 2-27 [“反革命”罪名重现  北京两名维权人士被以毛时代文件取消养老待遇](/articles/rfa/1046274.md)
 
 2-27 [加拿大国会报告：支持香港自治  防堵中国威胁](/articles/rfa/1046275.md)
-
-2-27 [欧洲第一国  荷兰国会认定新疆维吾尔遭种族灭绝](/articles/rfa/1046276.md)
-
-2-27 [抖音海外版涉侵犯美用户隐私   认赔9200万美元](/articles/rfa/1046277.md)
 
