--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-2 [谭德塞：调查病毒源头的专家将展开后续工作](/articles/voa/1041804.md)
+
+4-2 [李柱铭黎智英等7名香港民主派人士 反送中维园8-18案罪名成立](/articles/voa/1041805.md)
+
 4-2 [疆棉风波在华持续发酵，真抵制还是假抵制？](/articles/voa/1041806.md)
 
 4-2 [中国外交部长与东南亚外长举行会谈 试图拉拢东盟](/articles/voa/1041807.md)
@@ -596,8 +600,4 @@
 3-22 [中国追逃一名网上侮辱戍边烈士的男子](/articles/voa/1042102.md)
 
 3-22 [菲律宾称2百多艘中国渔船出现在有争议岩礁](/articles/voa/1042103.md)
-
-3-22 [共同社：美日防长同意台海发生军事冲突时密切合作](/articles/voa/1042104.md)
-
-3-22 [中国称将与美国组建气候变化工作组](/articles/voa/1042105.md)
 
