--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+4-2 [从eTORO上市估值看券商行业的变迁](/articles/ft/1045807.md)
+
+4-2 [后疫情时期，债市4月“魔咒”会否回归？](/articles/ft/1045808.md)
+
 4-1 [拜登公布2万亿美元基建计划](/articles/ft/1045809.md)
 
 4-1 [每周时事分析：中国在新疆问题上面临的难题](/articles/ft/1045810.md)
@@ -596,8 +600,4 @@
 2-5 [中国出口工厂鼓励员工春节加班](/articles/ft/1046105.md)
 
 2-5 [华尔街WSB遇上加密领域，魔幻事件如何解读？](/articles/ft/1046106.md)
-
-2-5 [GDP仍是衡量社会进步的良好标准](/articles/ft/1046107.md)
-
-2-5 [小米起诉美国防部与财政部：中美关系新走向的一个试金石](/articles/ft/1046108.md)
 
