--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-2 [一本正经的华仔 |  学阀是你想批评就能批评的吗？](/articles/cdt/384249.md)
+
 4-1 [【404文库】基本常识｜刚刚！新华社和人民日报被查！](/articles/cdt/384265.md)
 
 4-1 [【404文库】鱼眼观察｜华为的“新发明”厉害了](/articles/cdt/384266.md)
@@ -598,6 +600,4 @@
 2-18 [自由亚洲 | “习近平女儿信息泄露案” 家长公开信喊冤](/articles/cdt/385847.md)
 
 2-18 [世界灯火归来 | 茅台总工程师入围院士候选人：科技性不高侮辱性极强！](/articles/cdt/385848.md)
-
-2-17 [极昼工作室｜「两头婚」的春节，没有硝烟的性别战争无处不在](/articles/cdt/385852.md)
 
