--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+4-2 [路透社分析：美中关系虽紧张 中国不太可能把美国国债当成武器](/articles/voa/1041794.md)
+
+4-2 [美驻帕劳大使随访台湾 美国务院发言人表示华盛顿将继续深化美台关系](/articles/voa/1041795.md)
+
+4-2 [VOA连线(文灏): 佩洛西谴责香港判决民主领袖 美国国会讨论投票参与度](/articles/voa/1041796.md)
+
+4-2 [离开香港的人们需要救生艇和安全港](/articles/voa/1041797.md)
+
 4-2 [西藏流亡政府代表：中共西藏政策是变相的种族灭绝](/articles/voa/1041798.md)
 
 4-2 [西方官员说，俄罗斯间谍加紧获取北约机密](/articles/voa/1041799.md)
@@ -592,12 +600,4 @@
 3-22 [英国准备对抗来自中国的战略性威胁](/articles/voa/1042092.md)
 
 3-22 [亚特兰大亚裔游行 高喊出声：停止仇恨](/articles/voa/1042093.md)
-
-3-22 [欧洲国家进入了新的封锁期 印度和巴西的感染人数激增](/articles/voa/1042094.md)
-
-3-22 [美日合作应对台海冲突 即将访美的菅义伟将对北京更强硬](/articles/voa/1042095.md)
-
-3-22 [“国际消除种族歧视日”，拜登政府努力打击系统性种族主义](/articles/voa/1042096.md)
-
-3-22 [美联社：伊朗威胁美军基地和高级将领](/articles/voa/1042097.md)
 
