--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,13 +1,17 @@
 中国数字时代
 ------
 
+4-2 [Vicky Xu｜为什么要写维吾尔族社区的事情？要冒多大的风险去写？值不值得？](/articles/cdt/384243.md)
+
+4-2 [【网络民议】BBC记者沙磊调往台湾；网民：你们将再也听不到“抹黑”中国的声音](/articles/cdt/384247.md)
+
 4-2 [一本正经的华仔 |  学阀是你想批评就能批评的吗？](/articles/cdt/384249.md)
 
 4-1 [【404文库】基本常识｜刚刚！新华社和人民日报被查！](/articles/cdt/384265.md)
 
 4-1 [【404文库】鱼眼观察｜华为的“新发明”厉害了](/articles/cdt/384266.md)
 
-4-1 [情况有点复杂 | 中国有座城市，花了近30年把一条河熬成米其林级别的火锅汤底 ⎮ 淄博火锅鱼](/articles/cdt/384272.md)
+4-1 [情况有点复杂 | 中国有座城市，花了近30年把一条河熬成米其林级别的火锅汤底：淄博火锅鱼](/articles/cdt/384272.md)
 
 4-1 [北美新药科普历史网 | 世卫组织新冠朔源报告的三个缺憾](/articles/cdt/384277.md)
 
@@ -596,8 +600,4 @@
 2-18 [奇客资讯｜中国计划扩大人工影响天气](/articles/cdt/385808.md)
 
 3-15 [【招聘启事】中国数字时代/空间诚聘实习编辑、新闻编辑、档案编辑、社交媒体编辑及项目合作者](/articles/cdt/385843.md)
-
-2-18 [自由亚洲 | “习近平女儿信息泄露案” 家长公开信喊冤](/articles/cdt/385847.md)
-
-2-18 [世界灯火归来 | 茅台总工程师入围院士候选人：科技性不高侮辱性极强！](/articles/cdt/385848.md)
 
