--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,7 @@
 
 4-2 [Vicky Xu｜为什么要写维吾尔族社区的事情？要冒多大的风险去写？值不值得？](/articles/cdt/384243.md)
 
-4-2 [【网络民议】BBC记者沙磊调往台湾；网民：你们将再也听不到“抹黑”中国的声音](/articles/cdt/384247.md)
+4-2 [【网络民议】BBC记者沙磊调往台湾 网民：你们将再也听不到“抹黑”中国的声音](/articles/cdt/384247.md)
 
 4-2 [一本正经的华仔 |  学阀是你想批评就能批评的吗？](/articles/cdt/384249.md)
 
