--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-2 [专家谈美中角力的危机与契机](/articles/voa/1041789.md)
+
+4-2 [多样化儿童图书关系美国前途](/articles/voa/1041790.md)
+
 4-2 [中国是狼是羊？战狼外交官典故用得有点窘 自己也说不清了](/articles/voa/1041791.md)
 
 4-2 [白宫要义：美国正在观察新冠疫情对朝鲜领导层的影响；周五美日韩国安顾问三方会谈](/articles/voa/1041792.md)
@@ -596,8 +600,4 @@
 3-22 [北京庭审加拿大前外交官康明凯 近30名外交官庭外声援加拿大](/articles/voa/1042087.md)
 
 3-22 [洛杉矶亚裔反歧视集会，悼念亡者呼吁抗争](/articles/voa/1042088.md)
-
-3-22 [“这是最好的时代，也是最坏的时代”：资深美国新闻人谈报道今天的中国](/articles/voa/1042089.md)
-
-3-22 [拜登谴责对亚裔美国人的袭击 敦促国会通过新冠仇恨罪法案](/articles/voa/1042090.md)
 
