--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+4-2 [分析：非洲猪瘟再起重创中国北方养猪业 南方拉响警报](/articles/reuters/1039781.md)
+
+4-2 [中国重要财经新闻一周回顾](/articles/reuters/1039782.md)
+
 4-2 [美国副财长表示制裁将是未来数年的有力政策工具](/articles/reuters/1039783.md)
 
 4-2 [3月全球铜冶炼活动跌至至少五年来的最低水平](/articles/reuters/1039784.md)
@@ -596,8 +600,4 @@
 3-26 [美国谴责朝鲜发射弹道导弹 称其严重威胁国际和平和安全](/articles/reuters/1040079.md)
 
 3-26 [韩国古装剧摆出中式食物挨轰“扭曲历史” 广告主急切割](/articles/reuters/1040080.md)
-
-3-26 [独家：美国新行政令将要求软件公司受到攻击时通报政府--草案](/articles/reuters/1040081.md)
-
-3-26 [只有在经济“基本完全复原”时才会加息--美联储主席鲍威尔](/articles/reuters/1040082.md)
 
