--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-2 [非裔佛洛伊德案持续审讯 女友作证坦言有药瘾 – 法国国际广播电台 - RFI](/articles/rfi/1032444.md)
+
 4-2 [缅甸暴力镇压人民 联合国安理会一致强烈谴责 – 法国国际广播电台 - RFI](/articles/rfi/1032445.md)
 
 4-2 [OPEC+部长级视讯会议 同意5月起逐步增产石油 – 法国国际广播电台 - RFI](/articles/rfi/1032446.md)
@@ -598,6 +600,4 @@
 3-26 [伊布重披国家队战袍 世足会外赛瑞典首胜 – 法国国际广播电台 - RFI](/articles/rfi/1032742.md)
 
 3-26 [菅义伟表示将邀请拜登参加东京奥运会](/articles/rfi/1032743.md)
-
-3-26 [上诉庭裁定不在场也可裁定暴动及非法集结罪成立](/articles/rfi/1032744.md)
 
