--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+4-2 [台湾列车脱轨 造成数十人死亡](/articles/ft/1045800.md)
+
+4-2 [美房地产经纪公司Compass上市首日上涨](/articles/ft/1045801.md)
+
 4-2 [与中国谈贸易事宜，为何英国首相的阻力比山大？](/articles/ft/1045802.md)
 
 4-2 [美国将恢复受理工作签证](/articles/ft/1045803.md)
@@ -596,8 +600,4 @@
 2-7 [缅甸数千民众聚集抗议军政府](/articles/ft/1046098.md)
 
 2-7 [“他们正把羊群引向屠宰场”](/articles/ft/1046099.md)
-
-2-7 [国际刑事法院裁定其对巴勒斯坦被占领土有管辖权](/articles/ft/1046100.md)
-
-2-7 [美国大选：和平交权，宪法凯旋](/articles/ft/1046101.md)
 
