--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-2 [分析：中国央行公开市场连四周滚动对冲 海外起风浪国内政策“锚”定不动](/articles/reuters/1039776.md)
+
+4-2 [图表新闻：人民币/美元主要品种3月成交环增近七成 掉期和期权创纪录新高](/articles/reuters/1039777.md)
+
+4-2 [台湾东部铁路发生出轨意外初步4人无生命征象 相关单位投入救援](/articles/reuters/1039778.md)
+
 4-2 [分析：中国小城市开发商负债累累没法兑现卖房承诺 受伤的是购房者](/articles/reuters/1039779.md)
 
 4-2 [中国今年夏粮丰收有很好基础 一部分小麦和稻谷作饲用不影响口粮安全--官员](/articles/reuters/1039780.md)
@@ -594,10 +600,4 @@
 3-26 [标普全球评级称土耳其意外撤换央行总裁后形势“非常不稳定”](/articles/reuters/1040074.md)
 
 3-26 [综述：美联储官员承诺在经济全面复苏前不会撤走支持措施](/articles/reuters/1040075.md)
-
-3-26 [“新疆棉”风波继续发酵 耐克和阿迪达斯股价大跌](/articles/reuters/1040076.md)
-
-3-26 [焦点：苏伊士运河被堵数十艘集装箱船受困 全球航运业雪上加霜](/articles/reuters/1040077.md)
-
-3-26 [焦点：美国总统拜登称在他的任期内不会让中国超越美国 成为全球领导者](/articles/reuters/1040078.md)
 
