--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-2 [情况有点复杂 | 学习淄博好榜样：当一个城市的水污染被曝光后……](/articles/cdt/384236.md)
+
 4-2 [回声 Huisheng | 声援肖美丽，反击性别恐怖主义](/articles/cdt/384237.md)
 
 4-2 [Vicky Xu｜为什么要写维吾尔族社区的事情？要冒多大的风险去写？值不值得？](/articles/cdt/384243.md)
@@ -598,6 +600,4 @@
 2-18 [【CDTV】恶心程度媲美北朝鲜的《TG有点甜》](/articles/cdt/385804.md)
 
 2-18 [Matters｜我不是猫的电影评论：赵亮的纪录片《上访》](/articles/cdt/385805.md)
-
-2-18 [奇客资讯｜中国计划扩大人工影响天气](/articles/cdt/385808.md)
 
