--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-2 [英美真的在遵守和维护国际法吗？](/articles/nyt/1047005.md)
+
 4-2 [菲律宾外长激进回应美国亚裔遇袭事件](/articles/nyt/1047006.md)
 
 4-2 [面临舆论压力，日本还能对新疆问题保持沉默吗？](/articles/nyt/1047007.md)
@@ -598,6 +600,4 @@
 1-15 [简报：世卫专家访华开启溯源调查；孟晚舟生活状态曝光](/articles/nyt/1047303.md)
 
 1-14 [美国宣布禁止从新疆进口棉花和番茄产品](/articles/nyt/1047304.md)
-
-1-14 [第二次弹劾，特朗普时代注定的尾声](/articles/nyt/1047305.md)
 
