--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-2 [广东潮州庵埠镇整治无牌摩托车  警察闯入民宅抢车](/articles/rfa/1045975.md)
+
 4-2 [洛杉矶中领馆外爆发示威 抗议中国干涉缅甸政局](/articles/rfa/1045976.md)
 
 4-2 [外媒是改善中国形象一环？ 华春莹再飙BBC](/articles/rfa/1045977.md)
@@ -598,6 +600,4 @@
 2-27 [中国将落实延迟退休  对老百姓是福是祸？](/articles/rfa/1046273.md)
 
 2-27 [“反革命”罪名重现  北京两名维权人士被以毛时代文件取消养老待遇](/articles/rfa/1046274.md)
-
-2-27 [加拿大国会报告：支持香港自治  防堵中国威胁](/articles/rfa/1046275.md)
 
