--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-2 [台湾火车出轨意外 已造成至少54人死亡](/articles/dw/1043192.md)
+
+4-2 [德国如何从美国大规模基建中获益？](/articles/dw/1043193.md)
+
+4-2 [这个北极圈的小镇为何要申办夏季奥运？](/articles/dw/1043194.md)
+
 4-2 [台湾火车出轨意外 已造成至少48人死亡](/articles/dw/1043195.md)
 
 4-2 [战火下的孩子们](/articles/dw/1043196.md)
@@ -594,10 +600,4 @@
 3-16 [冷漠回应抵制北京冬奥诉求 国际奥会遭批假中立](/articles/dw/1043490.md)
 
 3-16 [多国停打阿斯利康疫苗 专家怎么说？](/articles/dw/1043491.md)
-
-3-16 [香港电影《少年的你》入围奥斯卡最佳国际影片](/articles/dw/1043492.md)
-
-3-16 [美媒：中国要求阿里巴巴出售旗下媒体业务](/articles/dw/1043493.md)
-
-3-16 [回应美韩军演 朝鲜要华盛顿小心「睡不安稳」](/articles/dw/1043494.md)
 
