--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-2 [智利单日染疫人数创新高 4月关闭边界 – 法国国际广播电台 - RFI](/articles/rfi/1032438.md)
+
 4-2 [巴勒斯坦获中国国药疫苗10万剂 – 法国国际广播电台 - RFI](/articles/rfi/1032439.md)
 
 4-2 [佛洛伊德案续审 救护员：抵现场时人已断气 – 法国国际广播电台 - RFI](/articles/rfi/1032440.md)
@@ -598,6 +600,4 @@
 3-26 [缅甸军政府政变爆发后 泰国冰毒走私将激增 – 法国国际广播电台 - RFI](/articles/rfi/1032736.md)
 
 3-26 [港股恒生指数收盘劲扬400多点 – 法国国际广播电台 - RFI](/articles/rfi/1032737.md)
-
-3-26 [法国外长对中国大使拒绝道歉表示不满](/articles/rfi/1032738.md)
 
