--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-2 [解放军机一天20架次施压台湾 台国安局长：他们来试天气](/articles/rfa/1045974.md)
+
 4-2 [广东潮州庵埠镇整治无牌摩托车  警察闯入民宅抢车](/articles/rfa/1045975.md)
 
 4-2 [洛杉矶中领馆外爆发示威 抗议中国干涉缅甸政局](/articles/rfa/1045976.md)
@@ -598,6 +600,4 @@
 2-27 [新疆大门是敞开的？UN和欧盟欲去调查受阻](/articles/rfa/1046272.md)
 
 2-27 [中国将落实延迟退休  对老百姓是福是祸？](/articles/rfa/1046273.md)
-
-2-27 [“反革命”罪名重现  北京两名维权人士被以毛时代文件取消养老待遇](/articles/rfa/1046274.md)
 
