--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+4-2 [中国银保监会批准设立山西银行，去年底山西曾发153亿“支持城商行”专项债](/articles/reuters/1039767.md)
+
+4-2 [华平投资欲设立外商参股证券公司 中国证监会已接收材料](/articles/reuters/1039768.md)
+
 4-2 [中国释放200万吨国储稻谷给饲料生产商 应对玉米价格高企--消息人士](/articles/reuters/1039769.md)
 
 4-2 [中国金融市场一周走势回顾](/articles/reuters/1039770.md)
@@ -596,8 +600,4 @@
 3-26 [小米官方微博预告将在3月29日的春季新品发布会上推出自研芯片](/articles/reuters/1040065.md)
 
 3-26 [中国商务部部长：推动进出口协同发展贸易创新 提高双向投资水平](/articles/reuters/1040066.md)
-
-3-26 [中国今年将引领东亚和太平洋地区经济复苏--世界银行](/articles/reuters/1040067.md)
-
-3-26 [独家：小米计划使用长城汽车的工厂生产自主品牌电动汽车--消息](/articles/reuters/1040068.md)
 
