--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-2 [法律园地｜纳粹德国时期的“人民法院”](/articles/cdt/384230.md)
+
 4-2 [立场新闻 | 香港法庭如何审判一场和平示威？](/articles/cdt/384231.md)
 
 4-2 [端传媒 | 中大半山腰，一个中国研究圣地的死亡（节选）](/articles/cdt/384234.md)
@@ -598,6 +600,4 @@
 2-19 [每日人物｜这一代年轻人，连离婚自由都没了？](/articles/cdt/385768.md)
 
 2-19 [【中国哭墙】感动不了CCTV，可你早就感动了中国（2月14-19日，2021年）](/articles/cdt/385773.md)
-
-2-18 [叫虱｜因为陈平到美国过年，我被读者气晕](/articles/cdt/385802.md)
 
