--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-2 [法国议员公开批评德国边境封锁政策](/articles/dw/1043187.md)
+
 4-2 [孟晚舟案 控辩双方争论美国是否违法](/articles/dw/1043188.md)
 
 4-2 [争议继续发酵 德国总统接种阿斯利康疫苗](/articles/dw/1043189.md)
@@ -598,6 +600,4 @@
 3-16 [德外长：欧盟预计将对华实施人权制裁](/articles/dw/1043485.md)
 
 3-16 [涉嫌诋毁戍边烈士  潘石屹之子被指遭警方追逃](/articles/dw/1043486.md)
-
-3-16 [加密消息应用软件Signal在中国停止运作](/articles/dw/1043487.md)
 
