--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+4-2 [欧盟对驻华外国记者处境表示忧虑](/articles/dw/1043183.md)
+
+4-2 [台湾火车出轨意外 50人罹难](/articles/dw/1043184.md)
+
+4-2 [俄外交官：外国驻朝鲜人员纷纷“逃离”](/articles/dw/1043185.md)
+
+4-2 [德语媒体：市场经济也是捍卫人权的武器](/articles/dw/1043186.md)
+
 4-2 [法国议员公开批评德国边境封锁政策](/articles/dw/1043187.md)
 
 4-2 [孟晚舟案 控辩双方争论美国是否违法](/articles/dw/1043188.md)
@@ -592,12 +600,4 @@
 3-16 [叙利亚革命中失踪的女律师](/articles/dw/1043481.md)
 
 3-16 [专家：德国新冠感染呈现指数式增长](/articles/dw/1043482.md)
-
-3-16 [日美外长、防长共同喊话中国](/articles/dw/1043483.md)
-
-3-16 [英国新外交政策：聚焦印太，因应中国挑战](/articles/dw/1043484.md)
-
-3-16 [德外长：欧盟预计将对华实施人权制裁](/articles/dw/1043485.md)
-
-3-16 [涉嫌诋毁戍边烈士  潘石屹之子被指遭警方追逃](/articles/dw/1043486.md)
 
