--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-2 [云南瑞丽爆发新一波疫情    中缅边境疫情防控难度高](/articles/rfa/1045973.md)
+
 4-2 [解放军机一天20架次施压台湾 台国安局长：他们来试天气](/articles/rfa/1045974.md)
 
 4-2 [广东潮州庵埠镇整治无牌摩托车  警察闯入民宅抢车](/articles/rfa/1045975.md)
@@ -598,6 +600,4 @@
 2-27 [美前国防防长: 台海局势非常危险](/articles/rfa/1046271.md)
 
 2-27 [新疆大门是敞开的？UN和欧盟欲去调查受阻](/articles/rfa/1046272.md)
-
-2-27 [中国将落实延迟退休  对老百姓是福是祸？](/articles/rfa/1046273.md)
 
