--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-2 [老教练为匹克球运动找到更安全宽阔的新天地](/articles/voa/1041780.md)
+
+4-2 [中俄法等国就美国重返伊该协议举行会议 下周将继续商讨](/articles/voa/1041781.md)
+
+4-2 [美国港澳总领事抨击香港选举制度大倒退，中国外交部反击：不吃这一套！](/articles/voa/1041782.md)
+
 4-2 [大学校园参与抗疫 设立疫苗注射中心](/articles/voa/1041783.md)
 
 4-2 [返港后失联11日 李宇轩家属终与其取得联络](/articles/voa/1041784.md)
@@ -594,10 +600,4 @@
 3-23 [澳大利亚议会辩论最强烈谴责中国在新疆系统性侵犯人权动议](/articles/voa/1042078.md)
 
 3-22 [欧盟批准对侵犯人权的中国官员实施制裁](/articles/voa/1042079.md)
-
-3-22 [无惧军政府血腥镇压 缅甸公民不服从运动如火如荼](/articles/voa/1042080.md)
-
-3-22 [“12港人案”中8人刑期已满被移交港警](/articles/voa/1042081.md)
-
-3-22 [俄罗斯外长访华 呼吁中俄减少使用美元](/articles/voa/1042082.md)
 
