--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-3 [欧盟在BBC记者前往台湾后呼吁中国确保新闻和言论自由](/articles/voa/1041779.md)
+
 4-2 [老教练为匹克球运动找到更安全宽阔的新天地](/articles/voa/1041780.md)
 
 4-2 [中俄法等国就美国重返伊该协议举行会议 下周将继续商讨](/articles/voa/1041781.md)
@@ -598,6 +600,4 @@
 3-23 [台湾官员带头接种阿斯利康疫苗，让民众放心疫苗安全性](/articles/voa/1042077.md)
 
 3-23 [澳大利亚议会辩论最强烈谴责中国在新疆系统性侵犯人权动议](/articles/voa/1042078.md)
-
-3-22 [欧盟批准对侵犯人权的中国官员实施制裁](/articles/voa/1042079.md)
 
