--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-3 [美中芯片战升级 专家：美国将继续领先](/articles/voa/1041775.md)
+
+4-3 [香港泛民建制政坛元老谈北京修改选制 建制内部竞争与国际关注](/articles/voa/1041776.md)
+
+4-3 [菅义伟访美推迟，美日预计会申明共同保卫尖阁诸岛之责任](/articles/voa/1041777.md)
+
 4-3 [哈萨克反中抗议此起彼伏 中国“一带一路”前途难料](/articles/voa/1041778.md)
 
 4-3 [欧盟在BBC记者前往台湾后呼吁中国确保新闻和言论自由](/articles/voa/1041779.md)
@@ -594,10 +600,4 @@
 3-23 [12港人案8人刑满深圳遣返 家属对港警交接安排感失望](/articles/voa/1042073.md)
 
 3-23 [时事大家谈: 美中对话变对撞，中国“平视世界”开场秀？](/articles/voa/1042074.md)
-
-3-23 [美国劳资博弈的背后 从亚马逊大战工会谈起](/articles/voa/1042075.md)
-
-3-23 [斯里兰卡驻华大使称不会与中国重谈汉班托塔港租赁协议](/articles/voa/1042076.md)
-
-3-23 [台湾官员带头接种阿斯利康疫苗，让民众放心疫苗安全性](/articles/voa/1042077.md)
 
