--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+4-3 [因质疑英烈被刑拘再添一人 用爱国绑架爱党？](/articles/rfa/1045966.md)
+
+4-3 [中国挑衅不断    美澳商讨台海局势应变计划](/articles/rfa/1045967.md)
+
+4-3 [“留苏派”经济学家李京文病逝 曾支持三峡工程](/articles/rfa/1045968.md)
+
 4-3 [专访北加本地居民凯文·格兰特：“我把香港放在心上”](/articles/rfa/1045969.md)
 
 4-3 [孟晚舟律师称她未被加拿大任意拘留    控方称美国没有违反国际法](/articles/rfa/1045970.md)
@@ -594,10 +600,4 @@
 3-1 [数十访民联署举报无锡两会非法维稳](/articles/rfa/1046264.md)
 
 3-1 [新疆准许部分少数民族与境外微信联系 中国考虑放宽哈人前往哈萨克](/articles/rfa/1046265.md)
-
-3-1 [中共建党百年 开学从娃娃抓起学党课](/articles/rfa/1046266.md)
-
-3-1 [“港版美丽岛”大审    重燃港人抗争意志](/articles/rfa/1046267.md)
-
-2-27 [二二八与爱憎蒋介石](/articles/rfa/1046268.md)
 
