--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+4-3 [疫情考量 MLB国民迎战大都会周末赛事延期 – 法国国际广播电台 - RFI](/articles/rfi/1032431.md)
+
+4-3 [白宫：拜登16日将在华府接待来访日相菅义伟 – 法国国际广播电台 - RFI](/articles/rfi/1032432.md)
+
+4-3 [美CDC：已对逾1亿人民注射至少1剂冠状病毒疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1032433.md)
+
+4-3 [美CDC:接种疫苗民众若采预防措施 可再度旅行 – 法国国际广播电台 - RFI](/articles/rfi/1032434.md)
+
 4-3 [核协议签署国下周开会 美与伊朗恐无法直接谈判 – 法国国际广播电台 - RFI](/articles/rfi/1032435.md)
 
 4-2 [受美股创新高激励 亚股交易清淡下走扬 – 法国国际广播电台 - RFI](/articles/rfi/1032436.md)
@@ -592,12 +600,4 @@
 3-26 [民间号召周末抗议 缅甸军政府再释放322人 – 法国国际广播电台 - RFI](/articles/rfi/1032729.md)
 
 3-26 [哈西德佩大学(埃克林教授评王毅访问土耳其 - 要闻解说](/articles/rfi/1032730.md)
-
-3-26 [英国9人和4实体因对新疆人权散播“谎言”遭北京制裁 - 法国报纸摘要](/articles/rfi/1032731.md)
-
-3-26 [孟晚舟案前警官拒出庭作证 加拿大法官质疑 – 法国国际广播电台 - RFI](/articles/rfi/1032732.md)
-
-3-26 [台湾两架F-5E战机高空擦撞的真相 - 台北一周](/articles/rfi/1032733.md)
-
-3-26 [佛州海牛1至3月死亡逾500头 几为过去3年总数 – 法国国际广播电台 - RFI](/articles/rfi/1032734.md)
 
