--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-3 [阿拉斯加“惨败”后力挽狂澜？中国外交动作频繁意欲何为？](/articles/voa/1041767.md)
+
+4-3 [又惹中国不满？H&M因“问题地图”遭约谈](/articles/voa/1041768.md)
+
+4-3 [拜登宣布取消特朗普政府对国际刑事法院官员的制裁](/articles/voa/1041769.md)
+
 4-3 [涉伪造签证为中兴在美招兵买马 佐治亚理工华裔教授被起诉](/articles/voa/1041770.md)
 
 4-3 [美国就业回升加速 失业率降至6%](/articles/voa/1041771.md)
@@ -594,10 +600,4 @@
 3-23 [VOA连线(文灏): 亚特兰大枪击受害者家人募款上百万](/articles/voa/1042065.md)
 
 3-23 [白宫要义: 白宫: 美中会议戏剧化也有实质，与欧盟站在一起制裁中国](/articles/voa/1042066.md)
-
-3-23 [人权活动人士纽约集会声援维吾尔人](/articles/voa/1042067.md)
-
-3-23 [美国再宣布制裁两名缅甸军警官员和两个步兵师](/articles/voa/1042068.md)
-
-3-23 [美疾控中心主任对新冠病例增加表示担心](/articles/voa/1042069.md)
 
