--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+4-3 [欧盟敦促中国确保言论自由 BBC记者沙磊离开大陆前往台湾](/articles/reuters/1039749.md)
+
+4-3 [伊核协议各方下周开会 美国与伊朗将间接会谈](/articles/reuters/1039750.md)
+
+4-3 [焦点：拜登欢迎强劲的就业数据 但警告疫情反扑会导致经济势头逆转](/articles/reuters/1039751.md)
+
 4-3 [美日韩高级安全会谈达成一致 将继续对朝鲜施压](/articles/reuters/1039752.md)
 
 4-3 [特斯拉首季交付逾18万辆汽车 刷新纪录并超过预期](/articles/reuters/1039753.md)
@@ -594,10 +600,4 @@
 3-26 [中信银行资产质量风险已经见底 将在母公司加强协同中最受益--高层](/articles/reuters/1040047.md)
 
 3-26 [大中华企业减排步伐过慢 2050年达至净零排放添难度--渣打](/articles/reuters/1040048.md)
-
-3-26 [也门胡塞武装称对沙特石油和军事设施发动了袭击](/articles/reuters/1040049.md)
-
-3-26 [中国国资委：加强地方国企债务风险管控 严禁恶意逃废债行为](/articles/reuters/1040050.md)
-
-3-26 [苏伊士运河堵船运费翻倍 油轮与LNG货轮纷纷改道](/articles/reuters/1040051.md)
 
