--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-3 [杜兰特歧视性字眼呛声 NBA开罚5万美元 – 法国国际广播电台 - RFI](/articles/rfi/1032430.md)
+
 4-3 [疫情考量 MLB国民迎战大都会周末赛事延期 – 法国国际广播电台 - RFI](/articles/rfi/1032431.md)
 
 4-3 [白宫：拜登16日将在华府接待来访日相菅义伟 – 法国国际广播电台 - RFI](/articles/rfi/1032432.md)
@@ -598,6 +600,4 @@
 3-26 [COVID-19全球逾1亿2545万例确诊 275万多人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1032728.md)
 
 3-26 [民间号召周末抗议 缅甸军政府再释放322人 – 法国国际广播电台 - RFI](/articles/rfi/1032729.md)
-
-3-26 [哈西德佩大学(埃克林教授评王毅访问土耳其 - 要闻解说](/articles/rfi/1032730.md)
 
