--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-3 [台湾火车出轨意外 51人罹难](/articles/dw/1043180.md)
+
+4-3 [七张图看一周大事](/articles/dw/1043181.md)
+
+4-3 [她99歲了 仍在跳芭蕾做慈善](/articles/dw/1043182.md)
+
 4-2 [欧盟对驻华外国记者处境表示忧虑](/articles/dw/1043183.md)
 
 4-2 [台湾火车出轨意外 50人罹难](/articles/dw/1043184.md)
@@ -594,10 +600,4 @@
 3-16 [日美外长、防长共同喊话中国 专家：空前强硬](/articles/dw/1043478.md)
 
 3-16 [德语媒体：中国在缅甸的尴尬境地](/articles/dw/1043479.md)
-
-3-16 [给全球艺术家带来灵感的少年画家](/articles/dw/1043480.md)
-
-3-16 [叙利亚革命中失踪的女律师](/articles/dw/1043481.md)
-
-3-16 [专家：德国新冠感染呈现指数式增长](/articles/dw/1043482.md)
 
