--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-3 [台湾称欧洲国家也在为其潜舰国造提供帮助](/articles/voa/1041764.md)
+
 4-3 [纽约警局：精神病是最近针对亚裔袭击案中的一个因素](/articles/voa/1041765.md)
 
 4-3 [美日韩国安顾问三边会谈 关注朝鲜核与弹道导弹项目](/articles/voa/1041766.md)
@@ -598,6 +600,4 @@
 3-23 [中国使馆骂法国研究人员为“小流氓”，“战狼外交”蜕化为“流氓外交“](/articles/voa/1042062.md)
 
 3-23 [美英加三国及澳新两国有关新疆的联合声明(全文翻译)](/articles/voa/1042063.md)
-
-3-23 [美联邦通信委员会审议一人权组织提出的对中国央视进行调查的要求](/articles/voa/1042064.md)
 
