--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-3 [人权团体：缅甸政变至今逾550平民丧生](/articles/dw/1043175.md)
+
+4-3 [德国总统发表讲话：让我们共同战疫吧！](/articles/dw/1043176.md)
+
 4-3 [潜舰国造：台湾称欧洲国家也帮忙](/articles/dw/1043177.md)
 
 4-3 [美国会大厦恶性安保事件  两人死亡](/articles/dw/1043178.md)
@@ -596,8 +600,4 @@
 3-17 [英外交转向印太 约翰逊谨慎看待中国](/articles/dw/1043473.md)
 
 3-17 [中国驻德使馆遭纵火 嫌犯被立案检控](/articles/dw/1043474.md)
-
-3-17 [香港电影《少年的你》入围奥斯卡最佳国际长片奖](/articles/dw/1043475.md)
-
-3-17 [专访：肛拭子测新冠，真的有必要吗？](/articles/dw/1043476.md)
 
