--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-3 [俄国军力集结边界 拜登坚定支持乌克兰 – 法国国际广播电台 - RFI](/articles/rfi/1032416.md)
+
+4-3 [佛州长迪尚特：疫苗护照侵犯个人自由 禁止使用 – 法国国际广播电台 - RFI](/articles/rfi/1032417.md)
+
+4-3 [缅甸军方遭控不断空袭 万余平民流离失所 – 法国国际广播电台 - RFI](/articles/rfi/1032418.md)
+
 4-3 [阿根廷总统宣布确诊COVID-19 – 法国国际广播电台 - RFI](/articles/rfi/1032419.md)
 
 4-3 [拜登取消制裁检察官 国际刑事法院表欢迎 – 法国国际广播电台 - RFI](/articles/rfi/1032420.md)
@@ -594,10 +600,4 @@
 3-27 [日防卫省智库报告指美中对立升至“新冷战水平”](/articles/rfi/1032714.md)
 
 3-27 [约翰逊：自由发表反对虐待的言论是根本，我坚决支持受制裁人士](/articles/rfi/1032715.md)
-
-3-27 [拜登参加欧洲理事会峰会：确保民主国家制定道路规则](/articles/rfi/1032716.md)
-
-3-27 [日美首脑会谈联合文件拟标注钓鱼岛适用安保条约](/articles/rfi/1032717.md)
-
-3-27 [台艺人挺新疆棉花与外企割席 苏贞昌：有些人为利益不知轻重](/articles/rfi/1032718.md)
 
