--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-3 [白宫取消前总统特朗普对国际刑事法院的制裁](/articles/dw/1043174.md)
+
 4-3 [人权团体：缅甸政变至今逾550平民丧生](/articles/dw/1043175.md)
 
 4-3 [德国总统发表讲话：让我们共同战疫吧！](/articles/dw/1043176.md)
@@ -598,6 +600,4 @@
 3-17 [外交不输北京 美议员提议增加经费](/articles/dw/1043472.md)
 
 3-17 [英外交转向印太 约翰逊谨慎看待中国](/articles/dw/1043473.md)
-
-3-17 [中国驻德使馆遭纵火 嫌犯被立案检控](/articles/dw/1043474.md)
 
