--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-3 [中国对外国银行设限引发全球银行高管担忧](/articles/voa/1041763.md)
+
 4-3 [台湾称欧洲国家也在为其潜舰国造提供帮助](/articles/voa/1041764.md)
 
 4-3 [纽约警局：精神病是最近针对亚裔袭击案中的一个因素](/articles/voa/1041765.md)
@@ -598,6 +600,4 @@
 3-23 [美众议员提法案将台湾纳入“北约加”国家成员](/articles/voa/1042061.md)
 
 3-23 [中国使馆骂法国研究人员为“小流氓”，“战狼外交”蜕化为“流氓外交“](/articles/voa/1042062.md)
-
-3-23 [美英加三国及澳新两国有关新疆的联合声明(全文翻译)](/articles/voa/1042063.md)
 
