--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-3 [台铁40年最严重火车事故 台湾降半旗悼念](/articles/dw/1043173.md)
+
 4-3 [白宫取消前总统特朗普对国际刑事法院的制裁](/articles/dw/1043174.md)
 
 4-3 [人权团体：缅甸政变至今逾550平民丧生](/articles/dw/1043175.md)
@@ -598,6 +600,4 @@
 3-17 [疫苗安全疑虑续延烧 欧盟称打疫苗好处大於风险](/articles/dw/1043471.md)
 
 3-17 [外交不输北京 美议员提议增加经费](/articles/dw/1043472.md)
-
-3-17 [英外交转向印太 约翰逊谨慎看待中国](/articles/dw/1043473.md)
 
