--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-3 [柏捷顿家族主角雷吉尚佩奇 第2季不会回归 – 法国国际广播电台 - RFI](/articles/rfi/1032415.md)
+
 4-3 [俄国军力集结边界 拜登坚定支持乌克兰 – 法国国际广播电台 - RFI](/articles/rfi/1032416.md)
 
 4-3 [佛州长迪尚特：疫苗护照侵犯个人自由 禁止使用 – 法国国际广播电台 - RFI](/articles/rfi/1032417.md)
@@ -598,6 +600,4 @@
 3-27 [美国共和党议员巡墨西哥边境引争议](/articles/rfi/1032713.md)
 
 3-27 [日防卫省智库报告指美中对立升至“新冷战水平”](/articles/rfi/1032714.md)
-
-3-27 [约翰逊：自由发表反对虐待的言论是根本，我坚决支持受制裁人士](/articles/rfi/1032715.md)
 
