--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-3 [鱼眼观察 | 又升级了：不打疫苗，开除！](/articles/cdt/384172.md)
+
 4-3 [补果君 | 今天，愚人节，我被炸的两个账号拿回来了](/articles/cdt/384176.md)
 
 4-3 [德国之声 | 长平观察：暴力受害者群体为何成为隐形人](/articles/cdt/384177.md)
@@ -598,6 +600,4 @@
 2-20 [【立此存照】警方通报网民“辣笔小球”诋毁戍边英雄：刑事拘留](/articles/cdt/385749.md)
 
 2-20 [【新闻连连看】“为什么外国人可以使用中国的社交媒体平台，而中国人就不可以使用推特和脸书呢？”](/articles/cdt/385750.md)
-
-2-19 [新京报  | “白酒院士”后再现“黄金院士”， 院士到底是怎么产生的？](/articles/cdt/385751.md)
 
