--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-3 [风传媒 |   揭新疆维族惨况遭抹黑“女汉奸”26岁前记者许秀中：我会写到“教培中心”关门为止](/articles/cdt/384170.md)
+
 4-3 [鱼眼观察 | 又升级了：不打疫苗，开除！](/articles/cdt/384172.md)
 
 4-3 [补果君 | 今天，愚人节，我被炸的两个账号拿回来了](/articles/cdt/384176.md)
@@ -598,6 +600,4 @@
 2-20 [华尔街日报 | 蚂蚁IPO被叫停的另一个原因：潜在受益的权贵人物在调查中浮出水面（节选）](/articles/cdt/385748.md)
 
 2-20 [【立此存照】警方通报网民“辣笔小球”诋毁戍边英雄：刑事拘留](/articles/cdt/385749.md)
-
-2-20 [【新闻连连看】“为什么外国人可以使用中国的社交媒体平台，而中国人就不可以使用推特和脸书呢？”](/articles/cdt/385750.md)
 
