--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-3 [英国AZ疫苗接种通报30例血栓 7人死亡 – 法国国际广播电台 - RFI](/articles/rfi/1032411.md)
+
+4-3 [俄罗斯兵力集结乌东 专家：争取筹码与西方谈判 – 法国国际广播电台 - RFI](/articles/rfi/1032412.md)
+
 4-3 [全球疫情确诊破1亿3000万例 逾283万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1032413.md)
 
 4-3 [网路巨头泄漏用户资料？美参议员要求说清楚 – 法国国际广播电台 - RFI](/articles/rfi/1032414.md)
@@ -596,8 +600,4 @@
 3-27 [德国男足在卡塔尔世界杯前着黑衣挺人权](/articles/rfi/1032709.md)
 
 3-27 [5年来首次，日本与印尼下周举行“2+2”会谈](/articles/rfi/1032710.md)
-
-3-27 [驻华外国记者协会呼吁当局，再次允许两会上的无底稿提问](/articles/rfi/1032711.md)
-
-3-27 [印度外长：中国是一个具有挑战性的邻居](/articles/rfi/1032712.md)
 
