--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-3 [台湾铁路事故肇事企业负责人被羁押后获准保释](/articles/voa/1041761.md)
+
 4-3 [新疆棉花遮蔽与凸显中国人权问题](/articles/voa/1041762.md)
 
 4-3 [中国对外国银行设限引发全球银行高管担忧](/articles/voa/1041763.md)
@@ -598,6 +600,4 @@
 3-23 [柴油产业期待拜登政府清洁能源倡议](/articles/voa/1042059.md)
 
 3-23 [美几大行业协会发表声明 支持以全球方式应对新疆问题](/articles/voa/1042060.md)
-
-3-23 [美众议员提法案将台湾纳入“北约加”国家成员](/articles/voa/1042061.md)
 
