--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-4 [时事大家谈：下个疫情可能已经开始了 我们准备好了吗？](/articles/voa/1041758.md)
+
+4-4 [北京中亚外交倾斜乌兹别克斯坦 当地对中国好感下降](/articles/voa/1041759.md)
+
+4-4 [美伊谈判前夕伊朗提条件：要求“一步到位”解除对伊朗所有制裁](/articles/voa/1041760.md)
+
 4-3 [台湾铁路事故肇事企业负责人被羁押后获准保释](/articles/voa/1041761.md)
 
 4-3 [新疆棉花遮蔽与凸显中国人权问题](/articles/voa/1041762.md)
@@ -594,10 +600,4 @@
 3-23 [协调盟友旗开得胜后 布林肯抵达布鲁塞尔探讨应对中国挑战的下一步行动](/articles/voa/1042056.md)
 
 3-23 [国会寻找解决未成年人涌入边境的方案](/articles/voa/1042057.md)
-
-3-23 [美英欧加联手制裁中国新疆官员，拜登“盟友外交”打响第一炮](/articles/voa/1042058.md)
-
-3-23 [柴油产业期待拜登政府清洁能源倡议](/articles/voa/1042059.md)
-
-3-23 [美几大行业协会发表声明 支持以全球方式应对新疆问题](/articles/voa/1042060.md)
 
