--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-4 [缅甸政府军向抗议人士开枪，打死5人](/articles/voa/1041756.md)
+
 4-4 [担忧国家安全 美国两党参议员要求美数字广告商提交外国客户名单](/articles/voa/1041757.md)
 
 4-4 [时事大家谈：下个疫情可能已经开始了 我们准备好了吗？](/articles/voa/1041758.md)
@@ -598,6 +600,4 @@
 3-23 [台湾跨党派立法委员支持增修香港人权及民主条款](/articles/voa/1042054.md)
 
 3-23 [不满中国反制裁 欧洲议会临时取消审议中欧全面投资协定](/articles/voa/1042055.md)
-
-3-23 [协调盟友旗开得胜后 布林肯抵达布鲁塞尔探讨应对中国挑战的下一步行动](/articles/voa/1042056.md)
 
