--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-4 [英国各地示威，抗议警察扩权法案](/articles/voa/1041754.md)
+
 4-4 [索马里首都发生自杀炸弹攻击，炸死10人](/articles/voa/1041755.md)
 
 4-4 [缅甸政府军向抗议人士开枪，打死5人](/articles/voa/1041756.md)
@@ -598,6 +600,4 @@
 3-23 [女辅警“勒索案”：正义审判，还是对穷人判决？](/articles/voa/1042052.md)
 
 3-23 [科罗拉多州枪击案导致10人丧生 国会今日起展开一系列听证会](/articles/voa/1042053.md)
-
-3-23 [台湾跨党派立法委员支持增修香港人权及民主条款](/articles/voa/1042054.md)
 
