--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-4 [克里：美国“有希望”能与中国合作应对气候变化](/articles/voa/1041752.md)
+
 4-4 [缅甸局势火爆，北京想不趟浑水却左右为难](/articles/voa/1041753.md)
 
 4-4 [英国各地示威，抗议警察扩权法案](/articles/voa/1041754.md)
@@ -598,6 +600,4 @@
 3-23 [俄中抱团 两国将共同对抗西方的指责和制裁](/articles/voa/1042050.md)
 
 3-23 [扑朔迷离的“国之大者”](/articles/voa/1042051.md)
-
-3-23 [女辅警“勒索案”：正义审判，还是对穷人判决？](/articles/voa/1042052.md)
 
