--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-4 [台铁太鲁阁号意外 习近平表达慰问](/articles/dw/1043160.md)
+
 4-4 [春天在德国吃什么？](/articles/dw/1043161.md)
 
 4-4 [疫情之下德国股市还能繁荣多久？](/articles/dw/1043162.md)
@@ -598,6 +600,4 @@
 3-18 [欧盟同意就新疆人权问题制裁中国官员](/articles/dw/1043458.md)
 
 3-18 [反华怒火将中国拖入缅甸政变危机](/articles/dw/1043459.md)
-
-3-18 [美情报官员：普京授权干预美大选 中国未有行动](/articles/dw/1043460.md)
 
