--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-4 [BBC | 记者沙磊：“使我被迫离开的在中国作报道的严峻现实”](/articles/cdt/384149.md)
+
 4-4 [Matters | 【墙外的书】关于新疆那些棉花以外的事——《躁动的新疆 不安的维吾尔》](/articles/cdt/384157.md)
 
 4-4 [Matters | William：关于新疆的种种疑问——回应一些主要的质疑](/articles/cdt/384160.md)
@@ -598,6 +600,4 @@
 2-21 [BBC | 中印冲突：时隔八个月后中国公布四名官兵死亡的背后考量](/articles/cdt/385737.md)
 
 2-21 [Matters | 新疆拘禁过后的生活](/articles/cdt/385739.md)
-
-2-21 [【旧闻重温】凤凰周刊 | 新疆青年柯木的选择](/articles/cdt/385743.md)
 
