--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-4 [饶舌歌手DMX心脏病发住院 – 法国国际广播电台 - RFI](/articles/rfi/1032404.md)
+
 4-4 [潜海下6500公尺找最深沈船 美军二战驱逐舰现踪 – 法国国际广播电台 - RFI](/articles/rfi/1032405.md)
 
 4-4 [亚马逊认了 送货司机忙到得尿在塑胶瓶里 – 法国国际广播电台 - RFI](/articles/rfi/1032406.md)
@@ -598,6 +600,4 @@
 3-27 [新冠溯源报告难产 美国疾控中心前主任指病毒源自武汉实验室](/articles/rfi/1032702.md)
 
 3-27 [拜登邀请习近平和普京参加全球气候视频峰会](/articles/rfi/1032703.md)
-
-3-27 [美国谴责中国政府“主导”的攻击禁用新疆棉花企业社媒运动](/articles/rfi/1032704.md)
 
