--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-4 [缅甸示威民众 画复活节彩蛋传递抗议讯息 – 法国国际广播电台 - RFI](/articles/rfi/1032401.md)
+
 4-4 [疫情升温 全球基督徒严格防疫措施下庆祝复活节 – 法国国际广播电台 - RFI](/articles/rfi/1032402.md)
 
 4-4 [NASA创新号火星直升机成功着陆 将展开飞行任务 – 法国国际广播电台 - RFI](/articles/rfi/1032403.md)
@@ -598,6 +600,4 @@
 3-27 [过去两个月美国发生500起歧视亚裔事件 六成华人称曾遭受种族歧视](/articles/rfi/1032699.md)
 
 3-27 [新冠：德国将整个法国列为“高风险”地区](/articles/rfi/1032700.md)
-
-3-27 [为重写新冠疫情起源，中国展开的信息战 - 法国世界报](/articles/rfi/1032701.md)
 
