--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-4 [中央社 | 挺新疆虚构记者找到了 为央视法语台前主播](/articles/cdt/384138.md)
+
+4-4 [【网络民议】儿童模仿阅兵    网民：“战狼也要从娃娃抓起”](/articles/cdt/384143.md)
+
 4-4 [【404文库】《给大午集团员工的一封信》《大午案十问十答》](/articles/cdt/384147.md)
 
 4-4 [BBC | 记者沙磊：“使我被迫离开的在中国作报道的严峻现实”](/articles/cdt/384149.md)
@@ -596,8 +600,4 @@
 2-21 [房东经济学Pro | 观察者网的大佬级嘉宾陈平在美国的大房子被扒出来了](/articles/cdt/385722.md)
 
 2-21 [【CDT专稿】一枚  |  应鸣而尊，迫默则辱 ——江棋生老师印象](/articles/cdt/385732.md)
-
-2-21 [鱼眼观察 | 饿了么又开始作妖了](/articles/cdt/385734.md)
-
-2-21 [BBC | 中印冲突：时隔八个月后中国公布四名官兵死亡的背后考量](/articles/cdt/385737.md)
 
