--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-4 [菲律宾控中国计划在南海占领更多重要据点 – 法国国际广播电台 - RFI](/articles/rfi/1032398.md)
+
+4-4 [印度疫情严峻 宝莱坞明星阿克夏库玛确诊 – 法国国际广播电台 - RFI](/articles/rfi/1032399.md)
+
+4-4 [约旦前王储自称被软禁 母亲推文盼无辜受害者平安 – 法国国际广播电台 - RFI](/articles/rfi/1032400.md)
+
 4-4 [缅甸示威民众 画复活节彩蛋传递抗议讯息 – 法国国际广播电台 - RFI](/articles/rfi/1032401.md)
 
 4-4 [疫情升温 全球基督徒严格防疫措施下庆祝复活节 – 法国国际广播电台 - RFI](/articles/rfi/1032402.md)
@@ -594,10 +600,4 @@
 3-27 [美股劲扬 道琼和标普指数创新高 – 法国国际广播电台 - RFI](/articles/rfi/1032696.md)
 
 3-27 [欧美经济报喜 欧股收红 – 法国国际广播电台 - RFI](/articles/rfi/1032697.md)
-
-3-27 [英国与欧盟就脱欧后金融服务规范 达成协议 – 法国国际广播电台 - RFI](/articles/rfi/1032698.md)
-
-3-27 [过去两个月美国发生500起歧视亚裔事件 六成华人称曾遭受种族歧视](/articles/rfi/1032699.md)
-
-3-27 [新冠：德国将整个法国列为“高风险”地区](/articles/rfi/1032700.md)
 
