--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-5 [我是颜小乙  | 武汉大暴雨，32万人挤满陵园：人群散去，他们哭了](/articles/cdt/384115.md)
+
 4-5 [春草微视 | 对不起，您拜访的墓地已欠费](/articles/cdt/384117.md)
 
 4-5 [中南屋 | 因为反对歧视非洲人，我们被网暴了](/articles/cdt/384133.md)
@@ -598,6 +600,4 @@
 2-22 [苹果日报｜长平：十年前的「中国茉莉花革命」](/articles/cdt/385713.md)
 
 2-22 [微路况 | 湖南养老院暴雷后，老人们决定偷偷死去](/articles/cdt/385714.md)
-
-2-22 [东雷老评 | 考古重大新发现就存活了一夜](/articles/cdt/385715.md)
 
