--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-5 [科索沃议会选举维约萨·奥斯马尼为国家总统](/articles/voa/1041743.md)
+
 4-5 [印度新冠感染创纪录 多国在封锁中度过复活节周末](/articles/voa/1041744.md)
 
 4-5 [拜登4月16日白宫会菅义伟，美欧俄中将重启伊朗核武谈判](/articles/voa/1041745.md)
@@ -598,6 +600,4 @@
 3-24 [美国对中国关押审判两加拿大公民的法律程序缺乏透明度深表不安](/articles/voa/1042041.md)
 
 3-24 [科罗拉多枪击案后拜登总统呼吁禁止攻击型武器](/articles/voa/1042042.md)
-
-3-24 [香港民主思路一国两制指数再创新低 国际关系紧张预期评分趋势下滑](/articles/voa/1042043.md)
 
