--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-5 [缅甸示威者发动复活节示威 军方持续暴力镇压](/articles/dw/1043151.md)
+
+4-5 [冲突未完? 印度冻结字节跳动银行账户](/articles/dw/1043152.md)
+
 4-4 [美国计划大规模利用风电](/articles/dw/1043153.md)
 
 4-4 [墙外文摘：“棉花战争”只是一场序曲？](/articles/dw/1043154.md)
@@ -596,8 +600,4 @@
 3-18 [拜登称普京是“杀人犯” 莫斯科怒了](/articles/dw/1043449.md)
 
 3-18 [坦桑尼亚总统去世 曾因为新冠否认论备受争议](/articles/dw/1043450.md)
-
-3-18 [爱尔兰无人机灯光秀](/articles/dw/1043451.md)
-
-3-18 [跳蚤市场淘一瓷碗  买家意外发财](/articles/dw/1043452.md)
 
