--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-5 [虚拟病人为护士培训提供安全环境](/articles/voa/1041741.md)
+
 4-5 [远程家教志工弥补新冠封锁导致的学习落后](/articles/voa/1041742.md)
 
 4-5 [科索沃议会选举维约萨·奥斯马尼为国家总统](/articles/voa/1041743.md)
@@ -598,6 +600,4 @@
 3-24 [两名麦克在中国秘密受审，加拿大联合盟友对抗人质外交](/articles/voa/1042039.md)
 
 3-24 [布林肯访问布鲁塞尔 促进美国与欧盟和北约的同盟关系](/articles/voa/1042040.md)
-
-3-24 [美国对中国关押审判两加拿大公民的法律程序缺乏透明度深表不安](/articles/voa/1042041.md)
 
